# PowerGrid

./: CMakeLists.txt  info_mv.md  info_mv.txt  pip_install.sh  setup.py  setupPGI.py
.devcontainer/: devcontainer.json
PowerGrid/: PowerGridIsmrmrd.cpp  PowerGridPy.cpp  TimeSegmentation.cpp  acqTracking.cpp
PowerGrid/MPI/: CMakeLists.txt  PowerGridPyMPI.cpp
PowerGrid/Python/: CMakeLists.txt  PowerGridPy.cpp  PowerGridPyMPI.cpp  setup_PGI.py  setup_PGIGPU.py  setup_nonPGI.py
PowerGrid/pgVectorize/: CMakeLists.txt  pgMat.hpp  pgSubview_Col.hpp
PowerGrid/pgVectorize/Tests/: pgColCplxTests.cpp  pgColTests.cpp  pgComplexTests.cpp  pgMatTests.cpp
docker/: develop-compose.yml  prod-compose.yml
docker/pg-hpcsdk/: Dockerfile
